just keep swimming just keep swimming

--- a/Code/stranding_analysis_data_wrangling.Rmd
+++ b/Code/stranding_analysis_data_wrangling.Rmd
@@ -69,6 +69,6 @@ Strandings_Clean <- rbind(TurtleStrandings, PinnipedStrandings, OdontoceteStrand
 Strandings_Final <- Strandings_Clean %>%
   select(Family, common_name:Date, Year, latitude:longitude)
 
-
+write.csv(Strandings_Final, row.names = TRUE, file = "../Data/Processed/strandings_final.csv")
 ```
 
