Additional work on the exploration coding and setup of the pinniped analysis

--- a/Code/stranding_analysis_data_exploration.Rmd
+++ b/Code/stranding_analysis_data_exploration.Rmd
@@ -26,6 +26,13 @@ dim(Stranding_Data)
 length(Stranding_Data)
 ```
 
+```{r}
+head(Stranding_Data)
+tail(Stranding_Data)
+```
+
+
+
 ```{r Data Exploration part 2}
 summary(Stranding_Data)
 ```
