--- a/Docs/Project_Template.Rmd
+++ b/Docs/Project_Template.Rmd
@@ -35,28 +35,52 @@ mainfont: Times New Roman
 
 
 # Rationale and Research Questions
+* Contains clear context for research topic
+* Contains rationale for dataset of choice
+* Contains one or more questions of an appropriate scope for the project
 
+
+
+Aquarium scientists maintain data on marine mammal and sea turtle strandings and sightings as a means of monitoring the behavior and health of these animals, always vigilant for changes in patterns that might signal an unusual event such as a viral outbreak or a toxic algal bloom. The condition of these animals reveals much about the health of our oceans.
+
+Marine animal strandings can be an indicator of the health of our oceans. 
 
 
 \newpage
 
 # Dataset Information
+* Describes source and content of data
+* Details the wrangling process from raw to processed data
+* Contains a table summarizing the dataset structure
+
+
+Mystic Aquarium's marine mammal and sea turtle stranding data 1976-2011
 
 
 
 \newpage
 
 # Exploratory Analysis 
+* Flow between text and visualizations is cohesive
+* Relevant exploratory information is visualized
 
 
 
 \newpage
 
 # Analysis
+* Flow between text and visualizations is cohesive
+* Visualizations and statistical tests pertain directly to specific questions 
+* Statistical results are reported in plain language with relevant statistical output in parentheses 
+* Findings are reported clearly in relation to research questions
 
 
 
 ## Question 1: <insert specific question here and add additional subsections for additional questions below, if needed>
+
+-look at any time trends within each family
+-any years that have significantly different number of strandings
+-spatial analysis --> hotspot analysis
 
 ## Question 2: 
 
@@ -66,9 +90,16 @@ mainfont: Times New Roman
 \newpage
 
 # Summary and Conclusions
+* Major findings are summarized
+* Conclusions relate back to the original research context 
 
 
 \newpage
 
-# References
-<add references here if relevant, otherwise delete this section> 
+## References
+
+#Data: <https://seamap.env.duke.edu/dataset/945> 
+
+Smith, A. 2014. Mystic Aquarium's marine mammal and sea turtle stranding data 1976-2011. Data downloaded from OBIS-SEAMAP (http://seamap.env.duke.edu/dataset/945) on 2022-04-02.
+
+Halpin, P.N., A.J. Read, E. Fujioka, B.D. Best, B. Donnelly, L.J. Hazen, C. Kot, K. Urian, E. LaBrecque, A. Dimatteo, J. Cleary, C. Good, L.B. Crowder, and K.D. Hyrenbach. 2009. OBIS-SEAMAP: The world data center for marine mammal, sea bird, and sea turtle distributions. Oceanography. 22(2):104-115.
