--- a/Code/pinniped_stranding_analysis.Rmd
+++ b/Code/pinniped_stranding_analysis.Rmd
@@ -5,7 +5,7 @@ date: '2022-04-02'
 output: pdf_document
 ---
 
-```{r Setup}
+```{r Setup, warning= FALSE}
 library(tidyverse)
 library(tidyr)
 library(lubridate)
@@ -39,6 +39,11 @@ Stranding_Data <- read.csv("../Data/Processed/strandings_final.csv", stringsAsFa
 Pinniped_Stranding_Data <- Stranding_Data %>%
   filter(Family == "Pinnipeds") %>%
   select(Family:longitude)
+
+Strandings_Totals <- read.csv("../Data/Processed/strandings_totals.csv", stringsAsFactors = TRUE)
+
+Pinniped_Stranding_Totals <- Strandings_Totals %>%
+  select(Year, Pinnipeds_Total)
 ```
 
 
@@ -46,7 +51,7 @@ Pinniped_Stranding_Data <- Stranding_Data %>%
 summary(Pinniped_Stranding_Data)
 
 ggplot(Pinniped_Stranding_Data) +
-  geom_bar(aes(x = Year, fill = species_name)) +
+  geom_bar(aes(x = Year, fill = common_name)) +
   ylab("Count") +
   labs(title = "Total Pinniped Strandings per Year by Species")
 ```
@@ -59,3 +64,14 @@ mapview(Pinniped_sf)
 ```
 
 
+
+
+Null Hypothesis: There is no effect of year on the total number of pinniped strandings
+Alternative Hypothesis: There is an effect of year on the total number of pinniped strandings
+
+```{r}
+Pinniped_Model <- lm(data = Pinniped_Stranding_Totals, Pinnipeds_Total ~ Year)
+summary(Pinniped_Model)
+```
+
+We reject the null hypothesis that there is no effect of year on the total number of pinniped strandings due to a p-value of 0.027 and adjusted R-squared value of 0.18.  The low adjusted R-squared value indicates that this model explains relatively little of the variability in total yearly pinniped strandings.  This variability could likely be explained by differing environmental factors each year, however our dataset did not include such data.  This could be an avenue of further research for a future project, if such environmental data is available.    
