--- a/Docs/Project_Template.tex
+++ b/Docs/Project_Template.tex
@@ -88,43 +88,148 @@
 \newpage
 
 \hypertarget{rationale-and-research-questions}{%
-\section{Rationale and Research
+\subsection{Rationale and Research
 Questions}\label{rationale-and-research-questions}}
+
+\begin{itemize}
+\tightlist
+\item
+  Contains clear context for research topic
+\item
+  Contains rationale for dataset of choice
+\item
+  Contains one or more questions of an appropriate scope for the project
+\end{itemize}
+
+Aquarium scientists maintain data on marine mammal and sea turtle
+strandings and sightings as a means of monitoring the behavior and
+health of these animals, always vigilant for changes in patterns that
+might signal an unusual event such as a viral outbreak or a toxic algal
+bloom. The condition of these animals reveals much about the health of
+our oceans.
+
+Marine animal strandings can be an indicator of the health of our
+oceans. Seeing patterns in the strandings of marine mammals and sea
+turtles can be indicative of viral outbreaks or toxic algal blooms.
+Being able to monitor these animals -heath impacts on humans
+--\textgreater{} it something is harming animals, will it harm us when
+we comsume seafood -monitor over the years to see if there were any
+trends on increases in strandings
 
 \newpage
 
 \hypertarget{dataset-information}{%
-\section{Dataset Information}\label{dataset-information}}
+\subsection{Dataset Information}\label{dataset-information}}
+
+\begin{itemize}
+\tightlist
+\item
+  Describes source and content of data
+\item
+  Details the wrangling process from raw to processed data
+\item
+  Contains a table summarizing the dataset structure
+\end{itemize}
+
+Mystic Aquarium's marine mammal and sea turtle stranding data 1976-2011
+-datum WGS:1984 -raw data -output table --\textgreater{} take from
+data\_wrangling file
 
 \newpage
 
 \hypertarget{exploratory-analysis}{%
-\section{Exploratory Analysis}\label{exploratory-analysis}}
+\subsection{Exploratory Analysis}\label{exploratory-analysis}}
+
+\begin{itemize}
+\tightlist
+\item
+  Flow between text and visualizations is cohesive
+\item
+  Relevant exploratory information is visualized
+\end{itemize}
 
 \newpage
 
 \hypertarget{analysis}{%
-\section{Analysis}\label{analysis}}
+\subsection{Analysis}\label{analysis}}
 
-\hypertarget{question-1-insert-specific-question-here-and-add-additional-subsections-for-additional-questions-below-if-needed}{%
-\subsection{Question 1: \textless insert specific question here and add
+\begin{itemize}
+\tightlist
+\item
+  Flow between text and visualizations is cohesive
+\item
+  Visualizations and statistical tests pertain directly to specific
+  questions
+\item
+  Statistical results are reported in plain language with relevant
+  statistical output in parentheses
+\item
+  Findings are reported clearly in relation to research questions
+\end{itemize}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  \textbf{Pinnipeds}:
+\end{enumerate}
+
+\emph{Question 1}: \textless insert specific question here and add
 additional subsections for additional questions below, if
-needed\textgreater{}}\label{question-1-insert-specific-question-here-and-add-additional-subsections-for-additional-questions-below-if-needed}}
+needed\textgreater{}
 
-\hypertarget{question-2}{%
-\subsection{Question 2:}\label{question-2}}
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{1}
+\tightlist
+\item
+  \textbf{Whales}:
+\end{enumerate}
+
+\emph{Question 1}: \textless insert specific question here and add
+additional subsections for additional questions below, if
+needed\textgreater{}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{2}
+\tightlist
+\item
+  \textbf{Turtles}:
+\end{enumerate}
+
+\emph{Question 1}: \textless insert specific question here and add
+additional subsections for additional questions below, if
+needed\textgreater{}
 
 \newpage
 
 \hypertarget{summary-and-conclusions}{%
-\section{Summary and Conclusions}\label{summary-and-conclusions}}
+\subsection{Summary and Conclusions}\label{summary-and-conclusions}}
+
+\begin{itemize}
+\tightlist
+\item
+  Major findings are summarized
+\item
+  Conclusions relate back to the original research context
+\end{itemize}
 
 \newpage
 
 \hypertarget{references}{%
-\section{References}\label{references}}
+\subsection{References}\label{references}}
 
-\textless add references here if relevant, otherwise delete this
-section\textgreater{}
+\#Data: \url{https://seamap.env.duke.edu/dataset/945}
+
+Smith, A. 2014. Mystic Aquarium's marine mammal and sea turtle stranding
+data 1976-2011. Data downloaded from OBIS-SEAMAP
+(\url{http://seamap.env.duke.edu/dataset/945}) on 2022-04-02.
+
+Halpin, P.N., A.J. Read, E. Fujioka, B.D. Best, B. Donnelly, L.J. Hazen,
+C. Kot, K. Urian, E. LaBrecque, A. Dimatteo, J. Cleary, C. Good, L.B.
+Crowder, and K.D. Hyrenbach. 2009. OBIS-SEAMAP: The world data center
+for marine mammal, sea bird, and sea turtle distributions. Oceanography.
+22(2):104-115.
 
 \end{document}
