--- a/Docs/Project_Template.Rmd
+++ b/Docs/Project_Template.Rmd
@@ -98,6 +98,8 @@ Mystic Aquarium's marine mammal and sea turtle stranding data 1976-2011
 *Question 1*: <insert specific question here and add additional subsections for additional questions below, if needed>
 
 
+
+
 \newpage
 
 ## Summary and Conclusions
@@ -105,12 +107,17 @@ Mystic Aquarium's marine mammal and sea turtle stranding data 1976-2011
 * Conclusions relate back to the original research context 
 
 
+
+
 \newpage
+
 
 ## References
 
-#Data: <https://seamap.env.duke.edu/dataset/945> 
+**Data**: <https://seamap.env.duke.edu/dataset/945> 
 
-Smith, A. 2014. Mystic Aquarium's marine mammal and sea turtle stranding data 1976-2011. Data downloaded from OBIS-SEAMAP (http://seamap.env.duke.edu/dataset/945) on 2022-04-02.
+1. Halpin, P.N., A.J. Read, E. Fujioka, B.D. Best, B. Donnelly, L.J. Hazen, C. Kot, K. Urian, E. LaBrecque, A. Dimatteo, J. Cleary, C. Good, L.B. Crowder, and K.D. Hyrenbach. 2009. OBIS-SEAMAP: The world data center for marine mammal, sea bird, and sea turtle distributions. Oceanography. 22(2):104-115.
 
-Halpin, P.N., A.J. Read, E. Fujioka, B.D. Best, B. Donnelly, L.J. Hazen, C. Kot, K. Urian, E. LaBrecque, A. Dimatteo, J. Cleary, C. Good, L.B. Crowder, and K.D. Hyrenbach. 2009. OBIS-SEAMAP: The world data center for marine mammal, sea bird, and sea turtle distributions. Oceanography. 22(2):104-115.
+2. Smith, A. 2014. Mystic Aquarium's marine mammal and sea turtle stranding data 1976-2011. Data downloaded from OBIS-SEAMAP (http://seamap.env.duke.edu/dataset/945) on 2022-04-02.
+
+
