--- a/Docs/Project_Template.tex
+++ b/Docs/Project_Template.tex
@@ -132,8 +132,9 @@ trends on increases in strandings
 \end{itemize}
 
 Mystic Aquarium's marine mammal and sea turtle stranding data 1976-2011
--datum WGS:1984 -raw data -output table --\textgreater{} take from
-data\_wrangling file
+-contains whales, dolphins, and sea turtles -number of different species
+in each family -datum WGS:1984 -raw data -output table --\textgreater{}
+take from data\_wrangling file
 
 \newpage
 
@@ -220,16 +221,20 @@ needed\textgreater{}
 \hypertarget{references}{%
 \subsection{References}\label{references}}
 
-\#Data: \url{https://seamap.env.duke.edu/dataset/945}
+\textbf{Data}: \url{https://seamap.env.duke.edu/dataset/945}
 
-Smith, A. 2014. Mystic Aquarium's marine mammal and sea turtle stranding
-data 1976-2011. Data downloaded from OBIS-SEAMAP
-(\url{http://seamap.env.duke.edu/dataset/945}) on 2022-04-02.
-
-Halpin, P.N., A.J. Read, E. Fujioka, B.D. Best, B. Donnelly, L.J. Hazen,
-C. Kot, K. Urian, E. LaBrecque, A. Dimatteo, J. Cleary, C. Good, L.B.
-Crowder, and K.D. Hyrenbach. 2009. OBIS-SEAMAP: The world data center
-for marine mammal, sea bird, and sea turtle distributions. Oceanography.
-22(2):104-115.
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\item
+  Halpin, P.N., A.J. Read, E. Fujioka, B.D. Best, B. Donnelly, L.J.
+  Hazen, C. Kot, K. Urian, E. LaBrecque, A. Dimatteo, J. Cleary, C.
+  Good, L.B. Crowder, and K.D. Hyrenbach. 2009. OBIS-SEAMAP: The world
+  data center for marine mammal, sea bird, and sea turtle distributions.
+  Oceanography. 22(2):104-115.
+\item
+  Smith, A. 2014. Mystic Aquarium's marine mammal and sea turtle
+  stranding data 1976-2011. Data downloaded from OBIS-SEAMAP
+  (\url{http://seamap.env.duke.edu/dataset/945}) on 2022-04-02.
+\end{enumerate}
 
 \end{document}
