--- a/Code/pinniped_stranding_analysis.Rmd
+++ b/Code/pinniped_stranding_analysis.Rmd
@@ -84,7 +84,16 @@ Alternative Hypothesis: There is an effect of year on the total number of pinnip
 
 ```{r ANOVA Model}
 Pinniped_Model <- aov(data = Pinniped_Stranding_Totals, Pinnipeds_Total ~ Year)
-summary(Pinniped_Model)
+
+Pinniped_Model
+
+summary.aov(Pinniped_Model)
+
+Pinniped_Model2 <- aov(data = Pinniped_Stranding_Totals, Pinnipeds_Total ~ factor(Year))
+
+Pinniped_Model2
+
+summary.aov(Pinniped_Model2)
 ```
 
 We reject the null hypothesis that there is no effect of year on the total number of pinniped strandings due to a p-value of 0.027.  This  effect could likely be explained by differing environmental factors each year, however our dataset did not include such data.  This could be an avenue of further research for a future project, if such environmental data is available.    
@@ -124,6 +133,7 @@ mapview(Pinniped_sf_utm,
         layer.name = "Distance (m) from Mean Stranding Point")
 ```
 
+Knowing where the "mean" stranding location is could allow for a study of that area in order to determine why pinniped strandings are so prominent on this area and allow for the allocation of more recovery resources and personnel to that area to compensate for the higher levels of strandings. 
 
 
 >>Temporal Analysis
